<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOpenEnterText"
        android:text="@string/btnOpenEnterText"
        android:layout_gravity="top"
        android:onClick="btnOpenEnterText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOpenSendText"
        android:id="@+id/btnOpenSendText"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="25dp"
        android:onClick="btnOpenSendText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtOpenSendText"
        android:hint="@string/edtOpenSendText"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOpenDrawCircle"
        android:id="@+id/btnOpenDrawCircle"
        android:layout_gravity="left|bottom"
        android:onClick="btnOpenDrawCircle"/>

</FrameLayout>
